Fix skiplink z-index issue.

--- a/components/skiplink/_skiplink.scss
+++ b/components/skiplink/_skiplink.scss
@@ -7,6 +7,7 @@
 	position: absolute;
 	top: -9999rem;
 	left: -9999rem;
+	z-index: $layer-overlay;
 	color: $color-black;
 	background-color: $color-accessibility;
 	font-weight: 700;
